# pb-jelly

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  dev_setup-osx.sh  gen_protos.sh
.github/workflows/: main.yml  publish.yml
ci/: run_black.sh  run_mypy.sh  run_rustfmt.sh
codegen/: codegen.py
examples/: Cargo.toml  README.md  build.rs
examples/basic/: Cargo.toml  build.rs  gen_protos.sh
examples/basic/codegen/: codegen.py
examples/basic/proto/rust/: extensions.proto
examples/basic/proto/rust/basic/: basic.proto
examples/basic/protos/team/: team.proto
examples/basic/src/: main.rs
examples/examples_gen/: Cargo.toml
examples/examples_gen/src/: main.rs
examples/protos/box_it/: basic.proto
examples/protos/custom_type/: custom.proto
examples/protos/linked_list/: node.proto
examples/protos/multi/team/: svc.proto
examples/protos/multi/user/: svc.proto
examples/protos/non_optional/: basic.proto
examples/protos/nullable_field/: basic.proto
examples/protos/serde/: basic.proto
examples/protos/sso/: city.proto
examples/protos/user/: user.proto
examples/protos/zero_copy/: basic.proto
examples/src/basic/: main.rs
examples/src/box_it/: main.rs
examples/src/custom_type/: main.rs
examples/src/linked_list/: main.rs
examples/src/multi/: main.rs
examples/src/non_optional/: main.rs
examples/src/nullable_field/: main.rs
examples/src/serde/: main.rs
examples/src/sso/: main.rs
examples/src/zero_copy/: main.rs
pb-gen/: Cargo.toml  README.md  gen_protos.sh
pb-gen/codegen/: codegen.py
pb-gen/codegen/proto/github/com/gogo/protobuf/gogoproto/: gogo_pb2.py
pb-gen/codegen/proto/rust/: extensions_pb2.py
pb-gen/protos/hello/: hello.proto
pb-gen/src/: lib.rs
pb-jelly/: Cargo.toml  README.md
pb-jelly-ctx/: Cargo.toml
pb-jelly-ctx/src/: context.rs  lib.rs
pb-jelly-gen/: Cargo.toml  LICENSE  README.md  gen_protos.sh  regen_gen_protos.sh  requirements.txt
pb-jelly-gen/codegen/: codegen.bat  codegen.py  generate_rust_extensions.sh  pyproject.toml  setup.cfg
pb-jelly-gen/codegen/proto/github/com/gogo/protobuf/gogoproto/: gogo_pb2.pyi
pb-jelly-gen/codegen/proto/rust/: extensions_pb2.py
pb-jelly-gen/codegen/rust/: extensions.proto
pb-jelly-gen/proto/rust/: extensions.proto
pb-jelly-gen/proto_google/: Cargo.toml
pb-jelly-gen/proto_google/src/: lib.rs
pb-jelly-gen/proto_google/src/protobuf/: descriptor.rs  mod.rs
pb-jelly-gen/proto_google/src/protobuf/compiler/: mod.rs  plugin.rs
pb-jelly-gen/proto_rust/: Cargo.toml
pb-jelly-gen/proto_rust/src/: extensions.rs  lib.rs
pb-jelly-gen/src/: codegen.rs  generate.rs  lib.rs  protos.rs
pb-jelly-svc/: Cargo.toml
pb-jelly-svc/codegen/: generate_services.bat  generate_services.py
pb-jelly-svc/codegen/proto/rust/: service_extensions_pb2.py  service_extensions_pb2.pyi
pb-jelly-svc/codegen/rust/: service_extensions.proto
pb-jelly-svc/src/: lib.rs
pb-jelly-svc/tests/: pb_test.rs
pb-jelly/src/: base_types.rs  buffer.rs  descriptor.rs  erased.rs  extensions.rs  helpers.rs  lib.rs  reflection.rs  str_bytes.rs  varint.rs  wire_format.rs
pb-jelly/src/tests/: mod.rs
pb-rs/: Cargo.toml  README.md
pb-rs/src/: base_types.rs  blob.rs  lib.rs
pb-rs/src/tests/: mod.rs
pb-test/: .gitignore  Cargo.toml  README.md  build.rs  dev_setup-osx.sh
pb-test/benches/: bench.rs
pb-test/data/: cities.json
pb-test/pb_test_gen/: Cargo.toml
pb-test/pb_test_gen/src/: main.rs
pb-test/proto/includes/rust/: extensions.proto
pb-test/proto/pbtest/: bench.proto  pbtest.proto  zero_copy.proto
pb-test/proto/rust/: extensions.proto
pb-test/src/: bench.rs  lib.rs  pbtest.rs  verify_generated_files.rs
pb-types/: Cargo.toml
pb-types/src/: lib.rs
pb-types/src/protobuf/: any.rs  duration.rs  empty.rs  timestamp.rs  type_.rs
pbtest/: BUILD
pbtest/benches/: lib.rs
pbtest/tests/: lib.rs
proto/: pbtest3.proto
proto/pbtest/: pbtest.proto  pbtest3.proto  servicepb.proto
proto/rust/: extensions.proto
src/: base_types.rs  lib.rs  wire_format.rs
tests/: bench.rs  pbtest.rs
