[workspace]
resolver = "2"
members = [
    "pb-jelly",
    "pb-jelly-gen",
]
exclude = [
    "examples",
    "pb-test",
]

[workspace.package]
version = "0.0.18"
edition = "2018"
repository = "https://github.com/dropbox/pb-jelly"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

[workspace.dependencies]
byteorder = "1.4"
bytes = "1.0"
compact_str = { version = "0.5", features = ["bytes", "serde"] }
tempfile = "3.1.0"
walkdir = "2.3.1"
pb-jelly = { path = "pb-jelly", version = "0.0.18" }
indexmap = "2.0.2"

