[package]
name = "examples"
version = "0.1.0"
authors = ["Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
compact_str = "0.5"
pb-jelly = "0.0.16"
proto_box_it = { path = "gen/rust/proto/proto_box_it" }
proto_custom_type = { path = "gen/rust/proto/proto_custom_type" }
proto_linked_list = { path = "gen/rust/proto/proto_linked_list" }
proto_multi = { path = "gen/rust/proto/proto_multi" }
proto_non_optional = { path = "gen/rust/proto/proto_non_optional" }
proto_nullable_field = { path = "gen/rust/proto/proto_nullable_field" }
proto_serde = { path = "gen/rust/proto/proto_serde" }
proto_sso = { path = "gen/rust/proto/proto_sso" }
proto_user = { path = "gen/rust/proto/proto_user" }
proto_zero_copy = { path = "gen/rust/proto/proto_zero_copy"}
serde_json = "1"


[[bin]]
name = "basic"
path = "src/basic/main.rs"

[[bin]]
name = "box_it"
path = "src/box_it/main.rs"

[[bin]]
name = "custom_type"
path = "src/custom_type/main.rs"

[[bin]]
name = "linked_list"
path = "src/linked_list/main.rs"

[[bin]]
name = "multi"
path = "src/multi/main.rs"

[[bin]]
name = "non_optional"
path = "src/non_optional/main.rs"

[[bin]]
name = "nullable_field"
path = "src/nullable_field/main.rs"

[[bin]]
name = "serde"
path = "src/serde/main.rs"

[[bin]]
name = "sso"
path = "src/sso/main.rs"

[[bin]]
name = "zero_copy"
path = "src/zero_copy/main.rs"

[patch.crates-io]
pb-jelly = { path = "../pb-jelly" }
