[package]
name = "pb-jelly-ctx"
description = "Context library for pb-jelly inspired by go"
version = "0.0.4"
authors = ["Ruslan Nigmatullin <elessar@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/master/pb-jelly"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

[dependencies]
lazy_static = "1.0.0"
