[package]
name = "pb-jelly-gen"
description = "A protobuf binding generation framework for the Rust language developed at Dropbox"
version = "0.0.16"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/main/pb-jelly-gen"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
walkdir = "2"

pb-jelly = { version = "0.0.16" }
lazy_static = "1.4.0"
indexmap = "2.0.2"

# Override pb-jelly dependency for generated crates as well
[patch.crates-io]
pb-jelly = { path = "../pb-jelly" }
