[package]
name = "pb-jelly-gen"
description = "A protobuf binding generation framework for the Rust language developed at Dropbox"
version = "0.0.17"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/main/pb-jelly-gen"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

include = ["src/**/*.rs", "README.md", "LICENSE", "proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generate"]
generate = ["walkdir", "tempfile"]

[dependencies]
tempfile = { version = "3.1.0", optional = true }
walkdir = { version = "2", optional = true }

pb-jelly = { version = "0.0.17" }
lazy_static = "1.4.0"
indexmap = "2.0.2"
