[package]
name = "pb-jelly-gen"
description = "A protobuf binding generation framework for the Rust language developed at Dropbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/dropbox/pb-jelly/tree/main/pb-jelly-gen"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "README.md", "LICENSE", "proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generate"]
generate = ["walkdir", "tempfile"]

[dependencies]
tempfile = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
pb-jelly = { workspace = true }
indexmap = { workspace = true }
