[package]
name = "pb-jelly-svc"
description = "A protobuf runtime for the Rust language developed at Dropbox"
version = "0.0.4"
authors = ["Robert Ying", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/master/pb-jelly"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

[dependencies]
anyhow = "1"
futures = "0.1.25"
pb-jelly = { version = "0.0.4", path = "../pb-jelly" }
pb-jelly-ctx = { version = "0.0.4", path = "../pb-jelly-ctx" }
