[package]
name = "pb-jelly"
description = "A protobuf runtime for the Rust language developed at Dropbox"
version = "0.0.5"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/master/pb-jelly"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.5.6"
serde = { version = "1.0.114", features = ["derive"] }

[features]
# Skips UTF-8 validation when using zero-copy Strings
#
# The (protobuf specification)[https://developers.google.com/protocol-buffers/docs/proto3#scalar]
# states that Strings must contain UTF-8 encoded text, so theoretically, validating a chunk
# of bytes is UTF-8 on deserialization shouldn't be needed. As a precaution though, we do this
# validation step. But validation can take a relatively large amount of time, so for users
# who wish to skip this validation, we provide the `zero_copy_string_no_utf8_check` feature flag.
zero_copy_string_no_utf8_check = []
