[package]
name = "pb-jelly"
description = "A protobuf runtime for the Rust language developed at Dropbox"
version = "0.0.6"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/dropbox/pb-jelly"
repository = "https://github.com/dropbox/pb-jelly/tree/master/pb-jelly"
readme = "README.md"
keywords = ["google", "protobuf", "proto", "dropbox"]
categories = ["encoding", "parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
