[package]
name = "pb-jelly"
description = "A protobuf runtime for the Rust language developed at Dropbox"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/dropbox/pb-jelly/tree/main/pb-jelly"
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true }
bytes = { workspace = true }
compact_str = { workspace = true }
