[package]
name = "pb-test"
version = "0.1.0"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
pb-jelly = "0.0.1"
pretty_assertions = "0.6.1"
proto_pbtest = { path = "gen/pb-jelly/proto_pbtest" }

# only used when benchmarking PROST!
prost = { version = "0.6", optional = true }
# only used when benchmarking rust-protobuf
protobuf = { version = "2.17", features = ["with-bytes"], optional = true }


[build-dependencies]
pb-jelly-gen = { path = "../pb-jelly-gen" }

# only used when benchmarking PROST!
prost-build = { version = "0.6", optional = true }
# only used when benchmarking rust-protobuf
protoc-rust = { version = "2.17", optional = true }


[features]
bench_prost = ["prost", "prost-build"]
bench_rust_protobuf = ["protobuf", "protoc-rust"]
