[package]
name = "pb-test"
version = "0.1.0"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
pb-jelly = "0.0.9"
pretty_assertions = "0.6.1"
proto_pbtest = { path = "gen/pb-jelly/proto_pbtest" }
walkdir = "2.3.1"

# only used when benchmarking PROST!
prost = { version = "0.6", optional = true }
# only used when benchmarking rust-protobuf
protobuf = { version = "2.17", features = ["with-bytes"], optional = true }

[features]
bench_prost = ["prost"]
bench_rust_protobuf = ["protobuf"]

# Override pb-jelly dependency for generated crates as well
[patch.crates-io]
pb-jelly = { path = "../pb-jelly" }
