[package]
name = "pb-test"
version = "0.1.0"
authors = ["Rajat Goel <rajat@dropbox.com>", "Nipunn Koorapati <nipunn@dropbox.com>", "Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
pb-jelly = { path = "../pb-jelly" }
pretty_assertions = "0.6.1"
proto_pbtest = { path = "gen/pb-jelly/proto_pbtest" }
walkdir = "2.3.1"

# only used when benchmarking PROST!
prost = { version = "0.6", optional = true }
# only used when benchmarking rust-protobuf
protobuf = { version = "3.3", features = ["bytes"], optional = true }

[dev-dependencies]
compact_str = { version = "0.5", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
bench_prost = ["prost"]
bench_rust_protobuf = ["protobuf"]
