[package]
name = "basic"
version = "0.1.0"
authors = ["Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pb = { path = "../../." }
proto_rust = { path = "generated/rust/proto/proto_rust" }
