[project]
name = "pb-jelly"
version = "0.0.15"
description = "Generate rust bindings from protobuf specs"
keywords = ["rust", "proto", "dropbox"]
license = { text = "Apache License 2.0" }
dependencies = ["protobuf>=3.13.0"]

[project.scripts]
protoc-gen-rust = "codegen:main"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
