[metadata]
name = pb-jelly codegen
version = 0.0.1
description = Generate rust bindings from protobuf specs
keywords = rust proto dropbox
license = Apache License 2.0
url = https://github.com/dropbox/pb-jelly

[options.entry_points]
console_scripts =
    protoc-gen-rust = codegen:main
install_requires =
    protobuf>=3.13.0
