[package]
name = "examples_gen"
version = "0.1.0"
authors = ["Parker Timmerman <parkertimmerman@dropbox.com>"]
edition = "2018"
publish = false

[dependencies]
#pb-jelly-gen = "0.0.16"  # If copying this example - use this
pb-jelly-gen = { path = "../../pb-jelly-gen" }

# only used when benchmarking PROST!
prost-build = { version = "0.6", optional = true }
# only used when benchmarking rust-protobuf
protobuf-codegen = { version = "3.3", optional = true }

[features]
bench_prost = ["prost-build"]
bench_rust_protobuf = ["protobuf-codegen"]

# Override pb-jelly dependency for generated crates as well
[patch.crates-io]
pb-jelly = { path = "../../pb-jelly" }
